# scarecrow-gnome-settings-daemon

./: .gitignore  .gitlab-ci.yml  ChangeLog  MAINTAINERS  NEWS  README  fix_dist.sh  meson.build  scarecrow-settings-daemon.doap
data/: io.github.scarecrow-de.settings-daemon.peripherals.gschema.xml.in  io.github.scarecrow-de.settings-daemon.peripherals.wacom.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.color.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.housekeeping.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.media-keys.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.power.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.wwan.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.xsettings.gschema.xml.in  io.github.scarecrow_de.settings-daemon.peripherals.gschema.xml.in  io.github.scarecrow_de.settings-daemon.peripherals.wacom.gschema.xml.in  io.github.scarecrow_de.settings-daemon.plugins.color.gschema.xml.in  io.github.scarecrow_de.settings-daemon.plugins.gschema.xml.in  io.github.scarecrow_de.settings-daemon.plugins.housekeeping.gschema.xml.in  io.github.scarecrow_de.settings-daemon.plugins.media-keys.gschema.xml.in  io.github.scarecrow_de.settings-daemon.plugins.power.gschema.xml.in  io.github.scarecrow_de.settings-daemon.plugins.sharing.gschema.xml.in  io.github.scarecrow_de.settings-daemon.plugins.wwan.gschema.xml.in  io.github.scarecrow_de.settings-daemon.plugins.xsettings.gschema.xml.in  meson.build  scarecrow-settings-daemon.convert  (+1 more)
plugins/datetime/: gsd-datetime-manager.c  gsd-timezone-monitor.c  main.c  meson.build  scsd-datetime-manager.c  scsd-datetime-manager.h  scsd-timezone-monitor.c  scsd-timezone-monitor.h  weather-tz.c
plugins/print-notifications/: gsd-print-notifications-manager.c  gsd-printer.c  main.c  meson.build  scsd-print-notifications-manager.c  scsd-print-notifications-manager.h  scsd-printer.c
plugins/wwan/: gsd-wwan-manager.c  main.c  meson.build  scsd-wwan-manager.c  scsd-wwan-manager.h
(+264 files in other folders)
